Update and rename Style.css to style.css

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 
     background-color: pink;
 
-    background-image: url(" /.IMG_9805.PNG");
+    background-image: url(" /.");
 
     background-position: 95% center;
 
