--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 
     background-color: pink;
 
-    background-image: url(" /.");
+    background-image: url("./bg-intro-desktop.png");
 
     background-position: 95% center;
 
